# webAPPclinica

./: .env.example  .gitignore  Procfile  README.md  app_web.py  clinicadata.db  deploy.sh  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt
app/: __init__.py  database.py
app/callbacks/: __init__.py  exames_callbacks.py  navigation.py  pacientes_callbacks.py  suites_callbacks.py
app/components/: __init__.py  sidebar.py
app/layouts/: __init__.py  error_page.py  exames.py  home.py  pacientes.py  suites_layout.py
app/models/: __init__.py  data_store.py  paciente_model.py
app/utils/: __init__.py  constants.py
assets/: style.css
lab2606/: README.md  RelatorioProduto14444.txt  nomes.txt  produtos.txt
lab2606/src/: ABB.java  AVL.java  App.java  Cliente.java  Entrada.java  IMapeamento.java  IMedicao.java  Lista.java  No.java  Pedido.java  Produto.java  ProdutoNaoPerecivel.java  ProdutoPerecivel.java  TabelaHash.java
